# team-control

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  run.py  setup.sh  ssl_gc_referee_message_pb2.py  ssl_vision_wrapper_pb2.py
.github/workflows/: TODO-build.yml  build-TC.yml  build.yml
cpp/src/TeamControl/Model/: SSL_DetectionFrame.cpp  SSL_DetectionFrame.hpp  SSL_FieldCircularArc.cpp  SSL_FieldCircularArc.hpp  SSL_FieldLineSegment.cpp  SSL_FieldLineSegment.hpp  SSL_FieldShapeType.hpp  SSL_GeometryData.cpp  SSL_GeometryData.hpp  SSL_GeometryFieldSize.cpp  SSL_GeometryFieldSize.hpp  SSL_GeometryModels.cpp  SSL_GeometryModels.hpp  SSL_WrapperPacket.cpp  SSL_WrapperPacket.hpp  Vector2f.hpp
cpp/src/TeamControl/proto2/: protoc.sh  ssl_gc_common.pb.cc  ssl_gc_common.pb.h  ssl_gc_game_event.pb.h  ssl_gc_referee_message.pb.cc  ssl_gc_referee_message.pb.h  ssl_vision_detection.pb.h  ssl_vision_geometry.pb.cc  ssl_vision_geometry.pb.h  ssl_vision_wrapper.pb.cc
python/: .gitignore  pyproject.toml
python/src/TeamControl/Model/: Frame.py  ssl_vision_detection_py.py  ssl_vision_geometry_py.py  ssl_vision_wrapper_py.py
python/src/TeamControl/SSL/: ssl_gc_referee_message_pb2.py
python/src/TeamControl/gc/: StageController.py
src/: CMakeLists.txt  SSL_AutoRef.cpp  SSL_VisionDetection.cpp  main.cpp
src/Python/: CMakeLists.txt  Model.cpp  Model.h  build.sh  setup.py
src/SSL/: CMakeLists.txt  SSL_Common.cpp  SSL_Common.h  SSL_Detection.cpp  SSL_Detection.h  SSL_Geometry.cpp  SSL_Geometry.h  SSL_Referee.cpp  SSL_Referee.h
src/TeamControl/: AutoRef.cpp  AutoRef.h  AutoRefController.cpp  AutoRefController.h  CMakeLists.txt  Makefile  Player.h  SSL_Receiver.cpp  SSL_Receiver.h  SSL_Sender.cpp  SSL_Sender.h  Server.cpp  Server.h  State.cpp  State.h  UDP.cpp  UDP.h  World_Model.cpp  World_Model.h
src/TeamControl/Model/: Ball.py  Robots.py  Untitled-1.py  World.py  ssl_vision_detection_py.py  ssl_vision_wrapper_py.py
src/TeamControl/SSL/: grSim_Commands_pb2.py  grSim_Packet_pb2.py  grSim_Replacement_pb2.py  grSim_Robotstatus_pb2.py  protoc.sh  ssl_autoref_ci_pb2.py  ssl_gc_api_pb2.py  ssl_gc_change_pb2.py  ssl_gc_ci_pb2.py  ssl_gc_common_pb2.py  ssl_gc_engine_config_pb2.py  ssl_gc_engine_pb2.py  ssl_gc_game_event_pb2.py  ssl_gc_geometry_pb2.py  ssl_gc_rcon_autoref_pb2.py  ssl_gc_rcon_pb2.py  ssl_gc_rcon_remotecontrol_pb2.py  ssl_gc_rcon_team_pb2.py  ssl_gc_referee_message_pb2.py  ssl_gc_state_pb2.py  ssl_simulation_config_pb2.py  ssl_simulation_control_pb2.py  ssl_simulation_error_pb2.py  ssl_simulation_robot_control_pb2.py  ssl_simulation_robot_feedback_pb2.py  ssl_simulation_synchronous_pb2.py  ssl_vision_detection_pb2.py  ssl_vision_detection_tracked_pb2.py  ssl_vision_geometry_pb2.py  ssl_vision_wrapper_pb2.py  ssl_vision_wrapper_tracked_pb2.py
src/TeamControl/gc/: GameController.py  StateController.py  gc.py
src/TeamControl/protobuf/: GameEvent.cpp  GameEvent.hpp  Referee.cpp  Referee.hpp  SSL_DetectionFrame.cpp  SSL_DetectionFrame.hpp  SSL_FieldCircularArc.cpp  SSL_FieldCircularArc.hpp  SSL_FieldLineSegment.cpp  SSL_FieldLineSegment.hpp  SSL_FieldShapeType.hpp  SSL_GeometryData.cpp  SSL_GeometryData.hpp  SSL_GeometryFieldSize.cpp  SSL_GeometryFieldSize.hpp  SSL_GeometryModels.cpp  SSL_GeometryModels.hpp  SSL_WrapperPacket.cpp  SSL_WrapperPacket.hpp  SSL_gc_Common.hpp  Vector2f.hpp
src/protobuf/: CMakeLists.txt  Makefile  protobuf.sh  protoc.sh  setup.sh  ssl_gc_common.pb.cc  ssl_gc_common.pb.h  ssl_gc_game_event.pb.cc  ssl_gc_game_event.pb.h  ssl_gc_geometry.pb.cc  ssl_gc_geometry.pb.h  ssl_gc_referee_message.pb.cc  ssl_gc_referee_message.pb.h  ssl_vision_detection.pb.cc  ssl_vision_detection.pb.h  ssl_vision_geometry.pb.cc  ssl_vision_geometry.pb.h  ssl_vision_wrapper.pb.cc  ssl_vision_wrapper.pb.h
src/swig/: .gitignore  CMakeLists.txt  World.cpp  World.h  World.i  pyproject.toml  setup.py
