[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TeamControl"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "argparse",
]

dynamic = [
    "version"
]

[tools.setuptools.packages.find]
where = ["src"]

[tools.setuptools.dynamic]
version = {attr = "tc.__version__"}